test/pass/codegen_module_export.ms
export const add := proc (a: Int, b: Int) -> Int {
  return a + b;
};
